--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
     "@react-native-firebase/messaging": "^20.5.0",
+    "@react-native-firebase/storage": "^20.5.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-onesignal": "^5.2.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
